@@ -47,6 +47,7 @@ regularly. Below only new and removed languages are listed, as well as
 changes to languages because of Phabricator reports.
 
 * (T193566) Added language support for Ambonese Malay (abs).
+* (T194047) Added language support for Shawiya, Latin script (shy-latn).
 
 === Breaking changes in 1.32 ===
 * $wgRequestTime was removed (deprecated in 1.25).
